    font issues.
  * MathJaX export can now be configured to instruct the html export to download
    MathJaX from a different URL: They moved the URL one can use and might do so
    again somewhere in the future.
  * Maximum number of digits and if we use user-defined labels now are no more
    hardcoded into the worksheet at evaluation time.
  * cmake is now our main build system: It is supported under MSVC, XCode,
    Code::Blocks, its output looks much nicer than the one from the autotools
    and setting it up uses much more straightforward constructs.
    The recipe to build a debian package using cmake can be found at
    https://code.launchpad.net/~peterpall/wxmaxima/packaging
  * Massive speed-ups
  * File/Open can now import .mac and .out files from Xmaxima
  * Many additional bug fixes and stability enhancements.

16.12:
  * Not a change in wxMaxima, but useful: In maxima >5.38 the load() command can
    load .wxm files like it would load .mac files.
  * Better detection and diagnosis for maxima process that terminate unexpectedly
    even if the OS fails to notify us that the network connection with
    maxima has dropped.
  * Incremental search
  * Automatic line wrap
  * Bullet lists now use real bullets.
  * Markdown: Block quote support
  * A button that temporarily hides all code cells
  * Massive speedups in the drawing code.
  * Added a wxstatusbar() command that allows a long-ranging block() to send a string
    about its progress to the status bar.
  * Support for cells that are >5000 pixels wide
  * Better High-DPI support
  * A Kabyle Translation for users of wxWidgets >= 3.0.1
  * Holding the "evaluate" key now evaluates all cells of the document one-by-one
  * .wxm files now include image cells
  * Drag-and-drop now handles image cells
  * Copy bitmap now can generate higher-resolution bitmaps
  * The application we drag-and-drop to now can select a format to get the data in
    including RTF, MathML, wxm, bitmap and plain text.