@@ -57,8 +57,6 @@ public:
   MathCell *m_cellSearchStartedIn;
   //! Which cursor position incremental search has started at?
   int m_indexSearchStartedAt;
-  //! Which GroupCell the last error message was in?
-  MathCell *m_error;
   //! Which cell the blinking cursor is in?
   MathCell *m_activeCell;
   //! The y position the selection starts at
