@@ -99,6 +99,9 @@ public:
 
   ~EditorCell();
 
+  //! May this Editor Cell contain the answer to a question?
+  void AutoAnswer(bool autoAnswer){m_autoAnswer = autoAnswer;}
+
   //! Which cell the blinking cursor is in?
   EditorCell *GetActiveCell()
   { return dynamic_cast<EditorCell *>(m_cellPointers->m_activeCell); }
@@ -518,6 +521,8 @@ public:
   }
 
 private:
+  //! Mark this cell as "Automatically answer questions".
+  bool m_autoAnswer;
   /*! Divide a string into tokens
 
     Used when styling text.
