@@ -34,6 +34,7 @@ Current:
     again somewhere in the future.
   * Maximum number of digits and if we use user-defined labels now are no more
     hardcoded into the worksheet at evaluation time.
+  * Anwers to maxima's questions are now remembered across sessions.
   * cmake is now our main build system: It is supported under MSVC, XCode,
     Code::Blocks, its output looks much nicer than the one from the autotools
     and setting it up uses much more straightforward constructs.
